--- a/nginx/deployment.yaml
+++ b/nginx/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         image: nginx:1.23
         envFrom:
           - configMapRef:
-              name: api-env-2
+              name: api-env
         ports:
         - name: http
           containerPort: 80
